kubernetes/apps/kube-system/cilium/config/gateway-test.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gateway
  labels:
    gateway: test-gateway
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.33.40.13,${CLUSTER_LBA_V6_PREFIX}:13
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.franta.us"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.franta.us"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: franta.us-production-tls
