kubernetes/apps/kube-system/cilium/config/clusterwidenetworkpolicy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cluster-ingress-allow
  annotations:
    future-me-why: "allow ingress from cluster for all endpoints, which also puts them in deny-by-default mode for ingress"
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - "cluster"
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: ingress-endpoint-allow-from-world
  annotations:
    future-me-why: "allow ingress from world for the reserved ingress endpoint (i.e. cilium envoy proxy for cilium ingress and gateway api)"
spec:
  endpointSelector:
    matchExpressions:
      - key: reserved:ingress
        operator: Exists
  ingress:
    - fromEntities:
        - "world"
